# BeePy

./: CHANGELOG.md  CHANGELOG_CN.md  README.en.md  README.md  README_CN.md  pyproject.toml
bee/: __init__.py  api.py  config.py  conn_builder.py  context.py  obj2sql.py  paging.py  sqllib.py  util.py
bee/osql/: const.py  logger.py  upperkey.py
docs/: bee.html  search.js
docs/bee/: active_record.html  anno.html  api.html  assist_api.html  bee_enum.html  condition.html  config.html  conn_builder.html  context.html  custom.html  exception.html  factory.html  helper.html  honeyfactory.html  name.html  osql.html  typing.html  util.html  version.html
src/bee/: SqlUtil.py  __init__.py  active_record.py  anno.py  api.py  assist_api.py  base.py  bee_enum.py  condition.py  config.py  conn_builder.py  context.py  custom.py  exception.py  factory.py  gen.py  hello.py  helper.py  honeyfactory.py  key.py  obj2sql.py  paging.py  sqllib.py  typing.py  util.py  version.py
test/entity/: Orders01.py  Orders3.py  Orders7.py
test/exam/: BatchInsertTest.py  BatchInsertTest2.py  SuidTest1.py  SuidTest10.py  SuidTest11Page.py  SuidTest12_insert.py  SuidTest13_insert.py  SuidTest32_update_delete.py  SuidTest42.py  SuidTest6.py  bee.db
tests/: MyConfig.py  test_all.py  test_all_3.8.py  test_name.py
tests/entity/: Orders.py  Orders02.py  Orders4.py  Orders8.py  Orders_2025.py  Orders_202501.py
tests/exam/: BatchInsertTest.py  BatchInsertTest2.py  BatchInsertTest3.py  SuidTest1.py  SuidTest11Page.py  SuidTest12_insert.py  SuidTest13_insert.py  SuidTest32_update_delete.py  bee.db  (+1 more)
(+167 files in other folders)
