[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bee"
version = "1.4.2"
requires-python = ">=3.6"
description = "Bee(BeePy) is an ORM tool with Python."
authors = [
  {name = "AiTeaSoft", email = "aiteasoft@126.com"},
  {name="Kingstar", email="honeysoft@126.com"},
]
maintainers = [
  {name = "AiTeaSoft", email = "aiteasoft@126.com"},
  {name="Kingstar", email="honeysoft@126.com"},
]
keywords = ["ORM", "Bee", "BeePy", "dao", "db", "DB", "pymysql", "sqlite3", "psycopg2", "Oracle", "database"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/automvc/BeePy"
Issues = "https://github.com/automvc/BeePy/issues"
Repository = "https://github.com/automvc/BeePy.git"
Changelog = "https://github.com/automvc/BeePy/blob/master/CHANGELOG.md"
